# carcom-oj

./: .editorconfig  .gitignore  Cargo.toml  Justfile  README.md  config.toml  pyproject.toml  requirements.txt
cp-lib/: Cargo.toml
cp-lib/src/: lib.rs
scripts/: add.sh  atcoder-metadata.py  atcoder-submit.py  bundle.py  dl.sh  import-atcoder-cookie.py  lib.sh  local-test.sh  login.sh  ls.sh  new.sh  open.sh  run-with-timeout.py  submit.sh  test.sh
templates/: contest-Cargo.toml.tmpl  main.rs.tmpl  meta.json.tmpl
